[package]
name = "nucleo-f401re-rtic-vl53l1x-uld"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal = "0.2.7"

cortex-m = { version = "0.7", features = ["critical-section-single-core"]}
cortex-m-rtic = "1.1.3"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
#panic-halt = "0.2"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }

stm32f4xx-hal = { version = "0.13.2", features = ["stm32f401", "rtic", "rtic-monotonic"] }

vl53l1x-uld = "1.0.0"

fugit = "0.3"

defmt = "0.3.2"
defmt-rtt = "0.4"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
